--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <br />
             Hold Button:
             <br />
-            &nbsp; &nbsp; Adds the current score to total points
+            &nbsp; &nbsp; Adds the current_score to total points
             <br />
             &nbsp; &nbsp; player switch
           </p>
