--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             <br />
             &nbsp; &nbsp; dice value is added to current score
             <br />
+            &nbsp; &nbsp; roll again or hold
+            <br />
             <br />
             Hold Button:
             <br />
